# HysingBubbleRise

./: CMakeLists.txt
config/: params.txt  thermo.txt
src/: main.cpp
src/include/: ch.h  debug.h  derivatives.h  mesh.h  pinn.h  thermo.h  train.h
src/source_files/: ch.cpp  debug.cpp  derivatives.cpp  mesh.cpp  pinn.cpp  thermo.cpp
